// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders with base props 1`] = `
<div
  className="lab-banner__info"
>
  <span
    className="lab-icon lab-icon--calendar lab-icon--white lab-banner__icon"
  />
  <span
    className="lab-banner__message"
  >
    Info Banner
  </span>
  <span
    className="lab-alert__button"
    onClick={[Function]}
    role="presentation"
  />
</div>
`;

exports[`Banner renders with button 1`] = `
<div
  className="lab-banner__warn"
>
  <span
    className="lab-icon lab-icon--coin lab-icon--white lab-banner__icon"
  />
  <span
    className="lab-banner__message"
  >
    Warn Banner with button
  </span>
  <span
    className="lab-alert__button"
    onClick={[Function]}
    role="presentation"
  >
    <button
      className="lab-btn lab-btn--text lab-btn--normal lab-btn--dark"
      onClick={[Function]}
      type="button"
    >
      
      Warn Button
    </button>
  </span>
</div>
`;
